# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html
.github/workflows/: pytest-check.yml
page_loader/: __init__.py  assets_loader.py  cli.py  config_loggers.py  filename_builder.py  filename_formatter.py  html_formatter.py  image_loader.py  page_loader.py  url.py
page_loader/scripts/: page_loader.py
ru-hexlet-io-courses_files/: ru-hexlet-io-assets-application.css  ru-hexlet-io-packs-js-runtime.js
tests/: __init__.py  test_assets_loader.py  test_filename_formatter.py  test_filepath_builder.py  test_html_formatter.py  test_image_loader.py  test_page_loader.py  test_url.py
