[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Internet page loader"
authors = ["Roman Poliakov <roman61394@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
