[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Internet page loader"
authors = ["Roman Poliakov <roman61394@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
